# nfl-game-stats

./: README.md  go.mod  go.sum  main.go  main.py  main.tex  pyproject.toml
pkg/data/: categorize.go  fetch.go  parse.go
