[tool.poetry]
name = "nfl-game-stats"
version = "0.1.0"
description = ""
authors = ["Matt Gleich <git@mattglei.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
